nueva directiva de ejemplo

--- a/src/app/pages/eager/home/home.component.html
+++ b/src/app/pages/eager/home/home.component.html
@@ -1,5 +1,5 @@
 HOME
 
-<button (click)="irACarrito()">ir a carrito</button>
+<button exampleDirective (click)="irACarrito()">ir a carrito</button>
 
 
