--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,43 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+#app-layout-content {
+  height: 100%;
+  min-height: 100%;
+}
+
+#app-main-content {
+  height: 100%;
+  min-height: 100%;
+}
+
+.brand-logo {
+  max-width: 100px;
+  max-height: 70px;
+
+  img {
+    max-width: 100%;
+  }
+}
+
+.sidenav-menu-container {
+  padding: 1.5em;
+  width: 50%;
+}
+
+.sidenav-menu {
+  padding: 1.5em;
+  min-height: 100%;
+}
+
+.mat-button-block {
+  width: 100%;
+}
