--- a/src/app/pages/eager/home/home.component.html
+++ b/src/app/pages/eager/home/home.component.html
@@ -1,5 +1,13 @@
-HOME
+<mat-card pageContainer>
+  <mat-card-title>Home </mat-card-title>
 
-<button exampleDirective (click)="irACarrito()">ir a carrito</button>
+  <mat-card-subtitle>Page Card Description</mat-card-subtitle>
 
-
+  <mat-card-content>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz
+      breeds of dog from Japan. A small, agile dog that copes very well with
+      mountainous terrain, the Shiba Inu was originally bred for hunting.
+    </p>
+  </mat-card-content>
+</mat-card>
