--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   <div fxLayout="row" fxHide fxShow.gt-sm>
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
-    <button mat-raised-button color="primary">Login</button>
+    <button mat-raised-button color="primary" (click)="handleLoginClick()">Login</button>
   </div>
   <div fxLayout="row" fxShow fxHide.gt-sm>
     <button mat-icon-button (click)="handleSideNavClick()">
