--- a/src/app/pages/eager/home/home.component.html
+++ b/src/app/pages/eager/home/home.component.html
@@ -1,7 +1,7 @@
 <mat-card pageContainer>
   <mat-card-title>Home </mat-card-title>
 
-  <mat-card-subtitle>Page Card Description</mat-card-subtitle>
+  <mat-card-subtitle>Bienvenidos a la Home!.</mat-card-subtitle>
 
   <mat-card-content>
     <p>
