--- a/src/app/pages/eager/layout/presentations/side-bar/side-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/side-bar/side-bar.component.html
@@ -6,8 +6,13 @@
   <div class="brand-logo"><h2>Taller Web</h2></div>
 
   <div fxLayout="column">
-    <button mat-raised-button color="primary" class="mat-button-block">
-      Login
+    <button
+      mat-raised-button
+      color="primary"
+      class="mat-button-block"
+      (click)="handleLoginClick()"
+    >
+      Ingresar
     </button>
   </div>
 </div>
