--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,1 +1,15 @@
-Carrito CONTENEDOR
+<mat-card pageContainer>
+  <mat-card-title>Carrito </mat-card-title>
+
+  <mat-card-subtitle
+    >Aqui se van a ver los productos agregados al carrito</mat-card-subtitle
+  >
+
+  <mat-card-content>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz
+      breeds of dog from Japan. A small, agile dog that copes very well with
+      mountainous terrain, the Shiba Inu was originally bred for hunting.
+    </p>
+  </mat-card-content>
+</mat-card>
