--- a/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
+++ b/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
@@ -1,16 +1,17 @@
+
 <mat-card pageContainer>
-    <mat-card-title>Home </mat-card-title>
   
-    <mat-card-subtitle>Bienvenidos a la Home!.</mat-card-subtitle>
-  
+    <mat-card-title>Historial de compras</mat-card-title>
+    
     <mat-card-content>
-      <div fxLayout="row" fxLayoutAlign="center">
-        <mat-card *ngFor="let product of products">
-          <mat-card-title> {{ product.name }} </mat-card-title>
-          <mat-card-subtitle> {{ product.description }}</mat-card-subtitle>
-          <mat-card-content> </mat-card-content>
-        </mat-card>
+      <div fxLayout="column" fxLayoutAlign="space-between">
+          <mat-card *ngFor="let product of products">
+            <mat-card-title> {{ product.name }} </mat-card-title> 
+            <mat-card-subtitle> {{ product.description }}</mat-card-subtitle>
+            <mat-card-content> ${{ product.price }} </mat-card-content>
+          </mat-card>
       </div>
     </mat-card-content>
+    
   </mat-card>
-  
+
