--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,15 +1,122 @@
-<mat-card pageContainer>
-  <mat-card-title>Carrito </mat-card-title>
+<h1><mat-icon>shopping_cart</mat-icon> Mi Carrito </h1>
+<mat-tab-group mat-align-tabs="start">
+  <mat-tab label="Mis productos seleccionados">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Producto</th>
+          <th scope="col">Descripción</th>
+          <th scope="col">Categoria</th>
+          <th scope="col">Precio</th>
+          <th scope="col"></th>
+    
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of orderById.products">
+          <td>{{product.name}}</td>
+          <td>{{product.description}}</td>
+          <td>{{product.category.description}}</td>
+          <td>$ {{product.price}} ARS</td>
+          <td><button _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
+        </tr>
 
-  <mat-card-subtitle
-    >Aqui se van a ver los productos agregados al carrito</mat-card-subtitle
-  >
+        <tr *ngIf="precioTotalCarrito" class="fila-total-precio">
+          <td></td>
+          <td></td>
+          <td>PRECIO TOTAL</td>
+          <td>$ {{precioTotalCarrito}} ARS</td>
+          <td></td>
 
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz
-      breeds of dog from Japan. A small, agile dog that copes very well with
-      mountainous terrain, the Shiba Inu was originally bred for hunting.
-    </p>
-  </mat-card-content>
-</mat-card>
+        </tr>
+      </tbody>
+    </table>
+  </mat-tab>
+  <mat-tab label="Mis datos personales para recibir compra">
+   
+    <div class="page-content page-container" id="page-content">
+      <div class="padding">
+          <div class="row container d-flex justify-content-center">
+              <div class="col-xl-12 col-md-12">
+                  <div class="card user-card-full">
+                      <div class="row m-l-0 m-r-0">
+                          <div class="col-sm-4 bg-c-lite-green user-profile">
+                              <div class="card-block text-center text-white">
+                                  <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                                  <h6 class="f-w-600">Hembo Tingor</h6>
+                                  <p>Web Designer</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                              </div>
+                          </div>
+                          <div class="col-sm-8">
+                              <div class="card-block">
+                                  <h6 class="m-b-20 p-b-5 b-b-default f-w-600 info-title">Información de Usuario</h6>
+                                  <div class="row">
+                                      <div class="col-sm-6">
+                                          <p class="m-b-10 f-w-600">Email</p>
+                                          <h6 class="text-muted f-w-400 info-user">{{orderById.user.email}}</h6>
+                                      </div>
+                                      <div class="col-sm-6">
+                                          <p class="m-b-10 f-w-600">Nombre Completo</p>
+                                          <h6 class="text-muted f-w-400 info-user">{{orderById.user.firstName}} {{orderById.user.lastName}}</h6>
+                                      </div>
+                                  </div>
+                                  <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Domicilio</h6>
+                                  <div class="row">
+                                      <div class="col-sm-6">
+                                          <p class="m-b-10 f-w-600">Dirección</p>
+                                          <h6 class="text-muted f-w-400 info-user">Sam Disuja</h6>
+                                      </div>
+                                  </div>
+                                  <ul class="social-link list-unstyled m-t-40 m-b-10">
+                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
+                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
+                                      <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
+                                  </ul>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+  </mat-tab>
+</mat-tab-group>
+
+
+<div class="example-button-row">
+  <button mat-raised-button color="primary" class="btn-calcular-precio" (click)="calcularPrecioTotalCarrito()">Calcular Precio Total de la Compra <mat-icon>cached</mat-icon></button>
+</div>
+
+
+<div class="example-button-row">
+  <button mat-raised-button color="primary" class="btn-confirmar-compra">Confirmar Compra <mat-icon>done_all</mat-icon></button>
+</div>
+
+<style>
+  .card-producto{
+    width: 250px;  
+  }
+  .btn-confirmar-compra{
+    width: 50%;
+    background-color: green;
+    margin-top: 25px;
+  }
+  .btn-calcular-precio{
+    margin-left: 1000px;
+  }
+  .info-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 15px;
+  }
+  .info-user{
+    font-size: 14px;
+  }
+  .fila-total-precio{
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+</style>
