--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -13,12 +13,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let product of orderById.products">
+        <tr *ngFor="let product of products">
           <td>{{product.name}}</td>
           <td>{{product.description}}</td>
           <td>{{product.category.description}}</td>
           <td>$ {{product.price}} ARS</td>
-          <td><button _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
+          <td><button (click)="eliminarProductoDelCarrito(product.id)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
         </tr>
 
         <tr *ngIf="precioTotalCarrito" class="fila-total-precio">
@@ -56,18 +56,18 @@
                                   <div class="row">
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Email</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{orderById.user.email}}</h6>
+                                          <h6 class="text-muted f-w-400 info-user">{{user?.email}}</h6>
                                       </div>
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Nombre Completo</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{orderById.user.firstName}} {{orderById.user.lastName}}</h6>
+                                          <h6 class="text-muted f-w-400 info-user">{{user?.firstName}} {{user?.lastName}}</h6>
                                       </div>
                                   </div>
                                   <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600 info-title">Domicilio</h6>
                                   <div class="row">
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Dirección</p>
-                                          <h6 class="text-muted f-w-400 info-user">Sam Disuja</h6>
+                                          <h6 class="text-muted f-w-400 info-user">{{user?.address}}</h6>
                                       </div>
                                   </div>
                                   <ul class="social-link list-unstyled m-t-40 m-b-10">
