--- a/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
+++ b/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
@@ -1,17 +1,31 @@
+<div class="container mt-5 mb-5">
+  <div class="d-flex justify-content-center row">
 
-<mat-card pageContainer>
-  
-    <mat-card-title>Historial de compras</mat-card-title>
-    
-    <mat-card-content>
-      <div fxLayout="column" fxLayoutAlign="space-between">
-          <mat-card *ngFor="let product of products">
-            <mat-card-title> {{ product.name }} </mat-card-title> 
-            <mat-card-subtitle> {{ product.description }}</mat-card-subtitle>
-            <mat-card-content> ${{ product.price }} </mat-card-content>
-          </mat-card>
+      <div class="col-md-10" *ngFor="let product of products">
+          <div class="row p-2 bg-white border rounded mt-2">
+              <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
+              <div class="col-md-6 mt-1">
+                  <h5>Entregado el 23 de junio</h5>
+                  <br>
+                  <p class="text-justify text-truncate para mb-0">{{ product.name }}<br><br></p>
+                  <p class="text-justify text-truncate para mb-0">{{ product.description }}<br><br></p>
+                  <h4 class="mr-1">${{ product.price }} x 1 Unidad</h4>
+              </div>
+
+              <div class="align-items-center align-content-center col-md-3 border-left mt-1">
+                <div class="d-flex flex-row align-items-center">
+                      <h4 class="mr-1">${{ product.price }}</h4>
+                  </div>
+
+                  <div class="d-flex flex-column mt-4">
+                    <button class="btn btn-primary btn-sm" type="button">Detalle</button>
+                    <br>
+                    <button class="btn btn-primary btn-sm" type="button">Comprar de nuevo</button>
+                  </div>
+              </div>
+
+          </div>
       </div>
-    </mat-card-content>
-    
-  </mat-card>
 
+  </div>
+</div>
