--- a/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.scss
+++ b/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.scss
@@ -2,16 +2,6 @@ body {
     background: #eee
 }
 
-.ratings i {
-    font-size: 16px;
-    color: red
-}
-
-.strike-text {
-    color: red;
-    text-decoration: line-through
-}
-
 .product-image {
     width: 100%
 }
@@ -34,6 +24,22 @@ body {
 
 h5 {
     font-weight: 400
+}
+
+.titulo {
+    font-size: 30px;
+}
+
+.entregado{
+    color: #938787;
+    font-size: 18px;
+    font-weight: 450;
+    margin-top: 15px;
+}
+
+.prodTitulo{
+    color: rgb(60, 103, 233);
+    font-size: 18px;
 }
 
 .para {
