--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   <div fxLayout="row" fxHide fxShow.gt-sm>
     <button mat-button (click)="handleMenuItemClick('home')">Home</button>
     <button mat-button (click)="handleMenuItemClick('carrito')">Carrito</button>
-    <button mat-button (click)="handleMenuItemClick('detalle-pedido')">Mis Compras</button>
+    <button mat-button (click)="handleMenuItemClick('misPedidos')">Mis Pedidos</button>
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
     <button
