--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -21,6 +21,7 @@
   
                     <div class="d-flex flex-column mt-4">
                       <button class="btn btn-primary btn-sm" type="button">Detalle</button>
+                      <a [routerLink] = "['Carrito']">LINK</a>
                       <br>
                       <button class="btn btn-primary btn-sm" type="button">Comprar de nuevo</button>
                     </div>
