--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,4 +1,4 @@
-<h1><mat-icon>shopping_cart</mat-icon> Mi Carrito </h1>
+<h1><mat-icon>shopping_cart</mat-icon> Mi Carrito de compras </h1>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Mis productos seleccionados">
     <table class="table table-striped">
@@ -18,7 +18,7 @@
           <td>{{product.description}}</td>
           <td>{{product.category.description}}</td>
           <td>$ {{product.price}} ARS</td>
-          <td><button (click)="eliminarProductoDelCarrito(product.id)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
+          <td><button (click)="eliminarProductoDelCarrito(product)" _ngcontent-yqx-c233="" mat-icon-button="" color="warn" class="mat-focus-indicator mat-icon-button mat-button-base mat-warn"><span class="mat-button-wrapper"><mat-icon _ngcontent-yqx-c233="" role="img" class="mat-icon notranslate material-icons mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">delete</mat-icon></span><span matripple="" class="mat-ripple mat-button-ripple mat-button-ripple-round"></span><span class="mat-button-focus-overlay"></span></button></td>
         </tr>
 
         <tr *ngIf="precioTotalCarrito" class="fila-total-precio">
@@ -52,7 +52,7 @@
                           </div>
                           <div class="col-sm-8">
                               <div class="card-block">
-                                  <h6 class="m-b-20 p-b-5 b-b-default f-w-600 info-title">Información de Usuario</h6>
+                                  <h6 class="m-b-20 p-b-5 b-b-default f-w-600 info-title">Mis datos personales</h6>
                                   <div class="row">
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Email</p>
@@ -87,7 +87,9 @@
   </mat-tab>
 </mat-tab-group>
 
+<button *ngIf="productosEliminadosDelCarrito.length > 0" (click)="agregarUltimoProductoEliminado()" mat-raised-button color="primary" class="btn-restaurar-productos">Restaurar Último Producto Eliminado<mat-icon>cached icon</mat-icon></button>
 
+<button (click)="MockGuardarProductosEnCarritoSession()" mat-raised-button color="" class="">RESTABLECER SESSION CON PRODUCTOS - MOCK PROVISORIO<mat-icon>cached icon</mat-icon></button>
 
 
 <div class="example-button-row">
@@ -120,6 +122,9 @@
   }
   #page-content{
     overflow-x:hidden;
+  }
+  .btn-restaurar-productos{
+    margin-left: 80%;
   }
 
 </style>
