--- a/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
+++ b/src/app/pages/lazy/detalle-pedido/container/detalle-pedido.component.html
@@ -2,22 +2,23 @@
 
   <div class="d-flex justify-content-center row">
 
-    <h1 class="col-md-10 titulo" >Compras</h1>
+
+    <h1 class="col-md-10 titulo" >Mis compras</h1>
 
       <div class="col-md-10" *ngFor="let product of products">
+
+       
           <div class="row p-2 bg-white border rounded mt-2">
-              <div class="col-md-3 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
+              <div class="col-md-2 mt-1"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
               <div class="col-md-6 mt-1">
-                  <p class="entregado">Entregado el 23 de junio </p>
+                  <p class="entregado">Entregado el 23 de julio </p>
                   <br>
                   <p class="text-justify text-truncate para mb-0 prodTitulo">{{ product.name }}<br><br></p>
                   <h4 class="mr-1">${{ product.price }} x 1 Unidad</h4>
               </div>
 
               <div class="align-items-center align-content-center col-md-3 border-left mt-1">
-                <div class="d-flex flex-row align-items-center">
-                      <h4 class="mr-1">${{ product.price }}</h4>
-                  </div>
+              
 
                   <div class="d-flex flex-column mt-4">
                     <button class="btn btn-primary btn-sm" type="button">Detalle</button>
