Carrito(Fix): Cambio sessionStorage por localStorage

--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,4 +1,4 @@
-<h1><mat-icon>shopping_cart</mat-icon> Mi Carrito de compras </h1>
+<h1><mat-icon class="icon-cart">shopping_cart</mat-icon> Mi Carrito de compras </h1>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Mis productos seleccionados">
     <table class="table table-striped align-middle">
@@ -129,6 +129,10 @@
   }
   .img-producto{
     width: 60px;
+  }
+  .icon-cart{
+    font-size: 40px;
+    margin: 10px 10px 0px 0px;
   }
 
 </style>
