--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -1,3 +1,5 @@
+<page-header text="Mis Pedidos" icon="view_list"></page-header>
+
 <div class="container mt-5 mb-5">
 
     <div class="d-flex justify-content-center row">
