--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -1,4 +1,5 @@
-<h1><mat-icon class="icon-cart">shopping_cart</mat-icon> Mi Carrito de compras </h1>
+<!-- <h1><mat-icon class="icon-cart">shopping_cart</mat-icon> Mi Carrito de compras </h1> -->
+<page-header text="Mi Carrito de compras" icon="shopping_cart"></page-header>
 <mat-tab-group mat-align-tabs="start">
   <mat-tab label="Mis productos seleccionados">
     <table class="table table-striped align-middle">
