--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,10 +16,14 @@
 @import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
+$headline-typography: mat-typography-config(
+  $headline: mat-typography-level(34px, 48px, 400),
+);
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat-core($headline-typography);
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -100,10 +104,26 @@ body {
   width: 100%;
 }
 
-.mt-3{
+// margins
+
+.mt-3 {
   margin-top: 1.5em;
 }
 
-.mt-4{
+.mt-4 {
   margin-top: 2em;
+}
+
+// paddings
+
+.p-1 {
+  padding: 0.5em;
+}
+
+.center {
+  text-align: center;
+}
+
+.w-32 {
+  width: 32%;
 }
