cambios de session etc.

--- a/src/app/pages/eager/layout/container/layout.component.html
+++ b/src/app/pages/eager/layout/container/layout.component.html
@@ -20,6 +20,7 @@
         (onSideNavClick)="toggleSideNav()"
         (onLoginClick)="openLoginModal()"
         (onMenuItemClick)="handleMenuItemClick($event)"
+        (onLogoutClick)="handleLogoutClick()"
       ></nav-bar>
     </header>
     <!-- END Header -->
