--- a/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
+++ b/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Login" (click)="setHeightLogin()">
+    <mat-tab label="Login">
       <form class="mt-3" (ngSubmit)="submitLogin()" [formGroup]="loginForm">
         <div fxLayout="column">
           <mat-form-field>
@@ -33,7 +33,7 @@
             mat-button
             mat-raised-button
             color="primary"
-            [disabled]="loginForm.invalid"
+            [disabled]="loginForm.invalid || processing"
           >
             Ingresar
           </button>
@@ -103,7 +103,7 @@
             mat-button
             mat-raised-button
             color="primary"
-            [disabled]="registerForm.invalid"
+            [disabled]="registerForm.invalid || processing"
           >
             Registrarse
           </button>
