--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -4,8 +4,12 @@
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
     <button mat-button (click)="handleMenuItemClick('home')">Home</button>
-    <button mat-button (click)="handleMenuItemClick('carrito')">Carrito</button>
-    <button mat-button (click)="handleMenuItemClick('misPedidos')">Mis Pedidos</button>
+    <button mat-button *ngIf="user" (click)="handleMenuItemClick('carrito')">
+      Carrito
+    </button>
+    <button mat-button *ngIf="user" (click)="handleMenuItemClick('misPedidos')">
+      Mis Pedidos
+    </button>
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
     <button
@@ -17,6 +21,7 @@
       Ingresar
     </button>
     <a *ngIf="user" mat-button>Bienvenido {{ user?.firstName }}!</a>
+    <a *ngIf="user" mat-button (click)="handleLogoutClick()">Salir</a>
   </div>
   <div fxLayout="row" fxShow fxHide.gt-sm>
     <button mat-icon-button (click)="handleSideNavClick()">
