--- a/src/app/pages/eager/layout/presentations/footer/footer.component.html
+++ b/src/app/pages/eager/layout/presentations/footer/footer.component.html
@@ -1,1 +1,10 @@
-Footer
+<mat-divider></mat-divider>
+<section fxLayout="column" class="mt-3 p-3">
+  <h2>Taller Web 2 - UNLaM</h2>
+  <div fxLayout="row">
+    <span>
+      <strong>Integrantes: </strong>Franco, Agustin || Magliano, Nicolas ||
+      Rearte, Pablo || Tofano, Sebastian
+    </span>
+  </div>
+</section>
