--- a/src/app/pages/eager/layout/container/layout.component.html
+++ b/src/app/pages/eager/layout/container/layout.component.html
@@ -34,10 +34,7 @@
 
     <!-- Footer -->
     <footer>
-      <mat-card>
-        <mat-card-title>Footer </mat-card-title>
-        <mat-card-subtitle>Footer Links</mat-card-subtitle>
-      </mat-card>
+      <footer-bar></footer-bar>
     </footer>
     <!-- END Footer -->
   </section>
