--- a/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
+++ b/src/app/pages/eager/layout/auth-dialog/auth-dialog.component.html
@@ -42,71 +42,125 @@
     </mat-tab>
     <mat-tab label="Registrarse">
       <form
-        class="mt-3"
+        class="mt-3 register-form"
         (ngSubmit)="submitRegister()"
         [formGroup]="registerForm"
       >
         <div fxLayout="column">
-          <mat-form-field>
-            <mat-label>Nombre</mat-label>
-            <input matInput type="text" formControlName="firstName" />
-            <mat-error *ngIf="registerForm.firstName?.hasError('minlength')">
-              El nombre debe tener al menos 3 caracteres.
-            </mat-error>
-            <mat-error *ngIf="registerForm.firstName?.hasError('required')">
-              El nombre es requerido.
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Apellido</mat-label>
-            <input matInput type="text" formControlName="lastName" />
-            <mat-error *ngIf="registerForm.lastName?.hasError('minlength')">
-              El Apellido debe tener al menos 3 caracteres.
-            </mat-error>
-            <mat-error *ngIf="registerForm.lastName?.hasError('required')">
-              El Apellido es requerido.
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Email</mat-label>
-            <input matInput type="text" formControlName="email" />
-            <mat-error *ngIf="registerForm.email?.hasError('email')">
-              El Email es invalido.
-            </mat-error>
-            <mat-error *ngIf="registerForm.email?.hasError('required')">
-              El Email es requerido.
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Password</mat-label>
-            <input matInput type="password" formControlName="password" />
-            <mat-error *ngIf="registerForm.password?.hasError('minlength')">
-              El Password debe tener al menos 6 caracteres.
-            </mat-error>
-            <mat-error *ngIf="registerForm.password?.hasError('required')">
-              El Password es requerido.
-            </mat-error>
-          </mat-form-field>
-          <mat-form-field>
-            <mat-label>Direccion</mat-label>
-            <input matInput type="text" formControlName="address" />
-            <mat-error *ngIf="registerForm.address?.hasError('minlength')">
-              La Direccion debe tener al menos 5 caracteres.
-            </mat-error>
-            <mat-error *ngIf="registerForm.address?.hasError('required')">
-              La Direccion es requerida.
-            </mat-error>
-          </mat-form-field>
-          <button
-            class="mt-4"
-            type="submit"
-            mat-button
-            mat-raised-button
-            color="primary"
-            [disabled]="registerForm.invalid || processing"
-          >
-            Registrarse
-          </button>
+          <h4><strong>Usuario</strong></h4>
+          <div fxLayout="row">
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Nombre *</mat-label>
+              <input matInput type="text" formControlName="firstName" />
+              <mat-error *ngIf="registerForm.firstName?.hasError('minlength')">
+                El nombre debe tener al menos 3 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.firstName?.hasError('required')">
+                El nombre es requerido.
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Apellido *</mat-label>
+              <input matInput type="text" formControlName="lastName" />
+              <mat-error *ngIf="registerForm.lastName?.hasError('minlength')">
+                El Apellido debe tener al menos 3 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.lastName?.hasError('required')">
+                El Apellido es requerido.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row">
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Email * </mat-label>
+              <input matInput type="text" formControlName="email" />
+              <mat-error *ngIf="registerForm.email?.hasError('email')">
+                El Email es invalido.
+              </mat-error>
+              <mat-error *ngIf="registerForm.email?.hasError('required')">
+                El Email es requerido.
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Password * </mat-label>
+              <input matInput type="password" formControlName="password" />
+              <mat-error *ngIf="registerForm.password?.hasError('minlength')">
+                El Password debe tener al menos 6 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.password?.hasError('required')">
+                El Password es requerido.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <h4><strong>Direccion</strong></h4>
+          <div fxLayout="row">
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Calle *</mat-label>
+              <input matInput type="text" formControlName="street" />
+              <mat-error *ngIf="registerForm.street?.hasError('minlength')">
+                La Calle debe tener al menos 1 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.street?.hasError('required')">
+                La Calle es requerida.
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Numero *</mat-label>
+              <input matInput type="text" formControlName="number" />
+              <mat-error *ngIf="registerForm.number?.hasError('minlength')">
+                El Numero debe tener al menos 1 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.number?.hasError('required')">
+                El Numero es requerida.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row">
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Ciudad *</mat-label>
+              <input matInput type="text" formControlName="city" />
+              <mat-error *ngIf="registerForm.city?.hasError('minlength')">
+                La Ciudad debe tener al menos 1 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.city?.hasError('required')">
+                La Ciudad es requerida.
+              </mat-error>
+            </mat-form-field>
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Provincia *</mat-label>
+              <input matInput type="text" formControlName="province" />
+              <mat-error *ngIf="registerForm.province?.hasError('minlength')">
+                La Provincia debe tener al menos 1 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.province?.hasError('required')">
+                La Provincia es requerida.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="row">
+            <mat-form-field fxLayout="column" class="p-1">
+              <mat-label>Pais *</mat-label>
+              <input matInput type="text" formControlName="country" />
+              <mat-error *ngIf="registerForm.country?.hasError('minlength')">
+                El Pais debe tener al menos 1 caracteres.
+              </mat-error>
+              <mat-error *ngIf="registerForm.country?.hasError('required')">
+                El Pais es requerida.
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <div fxLayout="column">
+            <button
+              class="mt-3 p-1"
+              type="submit"
+              mat-button
+              mat-raised-button
+              color="primary"
+              [disabled]="registerForm.invalid || processing"
+            >
+              Registrarse
+            </button>
+          </div>
         </div>
       </form>
     </mat-tab>
