cambios varios mas

--- a/src/app/pages/eager/home/home.component.html
+++ b/src/app/pages/eager/home/home.component.html
@@ -28,7 +28,7 @@
       <h1 class="home-h1">Taller Web 2</h1>
       <h2 class="home-h2">E-Commerce de la UNLaM creado en Angular.</h2>
     </div>
-    <button mat-button mat-raised-button>Ver Productos</button>
+    <button mat-button mat-raised-button (click)="handleProductClick()">Ver Productos</button>
   </div>
 </header>
 
