--- a/src/app/pages/eager/products/products.component.html
+++ b/src/app/pages/eager/products/products.component.html
@@ -1,3 +1,4 @@
+<page-header text="Productos" icon="shopping_cart"></page-header>
 <div fxLayout="row" fxLayout.sm="column">
   <div fxLayout="column" fxFlex="5">
   </div>
