--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -4,7 +4,9 @@
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
     <button mat-button (click)="handleMenuItemClick('home')">Home</button>
-    <button mat-button (click)="handleMenuItemClick('productos')">Productos</button>
+    <button mat-button (click)="handleMenuItemClick('productos')">
+      Productos
+    </button>
     <button mat-button *ngIf="user" (click)="handleMenuItemClick('carrito')">
       Carrito
     </button>
