--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -89,7 +89,7 @@
 
 <button *ngIf="productosEliminadosDelCarrito.length > 0" (click)="agregarUltimoProductoEliminado()" mat-raised-button color="primary" class="btn-restaurar-productos">Restaurar Último Producto Eliminado<mat-icon>cached icon</mat-icon></button>
 
-<button (click)="MockGuardarProductosEnCarritoSession()" mat-raised-button color="" class="">RESTABLECER SESSION CON PRODUCTOS - MOCK PROVISORIO<mat-icon>cached icon</mat-icon></button>
+<button (click)="MockGuardarProductosEnCarritoSession()" mat-raised-button color="" class="">RESTABLECER CARRITO PRUEBA - MOCK PROVISORIO<mat-icon>cached icon</mat-icon></button>
 <button (click)="agregarProductoAlCarritoMock()" mat-raised-button color="" class="m-lg-1">AGREGAR UN PRODUCTO  - MOCK PROVISORIO</button>
 
 
