--- a/src/app/pages/lazy/detallePedido/container/detallePedido.component.html
+++ b/src/app/pages/lazy/detallePedido/container/detallePedido.component.html
@@ -4,16 +4,16 @@
 
     <div class="d-flex justify-content-center row">
   
-      <h1 class="col-md-10 titulo" >Mis compras</h1>
+      <h1 class="col-md-10 titulo" >DETALLE DEL PEDIDO</h1>
   
-        <div class="col-md-10" *ngFor="let order of orders">
+        <div class="col-md-10" *ngFor="let product of products">
             <div class="row p-2 bg-white border rounded mt-2">
                 <div class="col-md-3 mt-1 container-img"><img class="img-fluid img-responsive rounded product-image" src="https://i.imgur.com/HO8e9b8.jpg"></div>
                 <div class="col-md-4 contenedor-desc">
-                    <p class="entregado">Entregado el {{ order.date }} </p>
+                    <p class="entregado">Entregado el {{ product.name }} </p>
                    
-                    <p class="text-justify text-truncate para prodTitulo">Codigo de orden: {{ order._id }}</p>
-                    <h4 class="mr-1">Nombre: {{ order.products.id }} </h4>
+                    <p class="text-justify text-truncate para prodTitulo">Codigo de orden: {{ product.name }}</p>
+                    <h4 class="mr-1">Nombre: {{ product.name }} </h4>
                     <h3 class="mr-1 "> <b>Unidades: </b>1</h3>
                     <h4 class="mr-1"> <b>Total: </b>$10</h4>
                     
@@ -25,7 +25,7 @@
                     </div> -->
   
                     <div class="contenedor-buton mb-2">
-                      <button class="btn btn-primary btn-sm button-detail button-margin" type="button" (click)="handleDetallePedidoClick()">Ver Detalle</button>
+                      <button class="btn btn-primary btn-sm button-detail button-margin" type="button">Ver Detalle</button>
                       <button class="btn btn-custom btn-sm button-detail" type="button">Comprar de nuevo</button>
                     </div>
                 </div>
