--- a/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
+++ b/src/app/pages/lazy/misPedidos/container/misPedidos.component.html
@@ -14,6 +14,7 @@
                    
                     <p class="text-justify text-truncate para  prodTitulo">{{ product.name }}</p>
                     <h4 class="mr-1">${{ product.price }} x unidad</h4>
+                    <h4 class="mr-1">Fecha {{ product.date | date: 'dd/MM/YYYY' }}</h4>
                     <h3 class="mr-1 "> <b>Unidades: </b>1</h3>
                     <h4 class="mr-1"> <b>Total: </b>$10</h4>
                     
