--- a/src/app/pages/lazy/carrito/container/carrito.component.html
+++ b/src/app/pages/lazy/carrito/container/carrito.component.html
@@ -68,9 +68,14 @@
                                   <div class="row">
                                       <div class="col-sm-6">
                                           <p class="m-b-10 f-w-600">Dirección</p>
-                                          <h6 class="text-muted f-w-400 info-user">{{user?.address}}</h6>
+                                          <h6 class="text-muted f-w-400 info-user">{{user?.address.street}} {{user?.address.number}}</h6>
                                       </div>
+                                      <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Ubicación</p>
+                                        <h6 class="text-muted f-w-400 info-user">{{user?.address.city}}, {{user?.address.province}}, {{user?.address.country}}</h6>
+                                    </div>
                                   </div>
+                                  
                                   <ul class="social-link list-unstyled m-t-40 m-b-10">
                                       <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
                                       <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
@@ -94,9 +99,9 @@
 <button (click)="agregarProductoAlCarritoMock()" mat-raised-button color="" class="m-lg-1">AGREGAR UN PRODUCTO  - MOCK PROVISORIO</button>
 
 
-<div class="example-button-row">
-  <button (click)="confirmarCompra()" mat-raised-button color="primary" class="btn-confirmar-compra ">Confirmar Compra <mat-icon>done_all</mat-icon></button>
-</div>
+<button  (click)="vaciarCarrito()"mat-raised-button color="primary" class="btn-vaciar-carrito">Vaciar Carrito<mat-icon>remove_shopping_cart</mat-icon></button>
+<button (click)="confirmarCompra()" mat-raised-button color="primary" class="btn-confirmar-compra">Comprar<mat-icon>done_all</mat-icon></button>
+
 
 <style>
   .card-producto{
@@ -105,7 +110,11 @@
   .btn-confirmar-compra{
     width: 50%;
     background-color: green;
-    margin-top: 25px;
+  }
+  .btn-vaciar-carrito{
+    width: 10%;
+    background-color: red;
+    margin-left: 85%;
   }
   .btn-calcular-precio{
     margin-left: 1000px;
