Agrego Controller de Products

--- a/src/app/pages/eager/products/products.component.html
+++ b/src/app/pages/eager/products/products.component.html
@@ -15,7 +15,7 @@
       <mat-card-content>
         <div fxLayout="row">
           <mat-card *ngFor="let product of products">
-            <img mat-card-image src="https://img.joomcdn.net/78de575f5bb9003b3292486fe89e9aac7eb9dd81_original.jpeg" alt="T-Shirt">
+            <img mat-card-image src="https://images.ssstatic.com/pelota-de-futbol-antiestres-5920384n0-19082912.jpg" class="w-auto" alt="T-Shirt">
             <mat-card-title> {{ product.name }} </mat-card-title>
             <mat-card-subtitle> {{ product.description }}</mat-card-subtitle>
             <mat-card-subtitle> {{ product.price }}</mat-card-subtitle>
