cambios boton carrito

--- a/src/app/pages/eager/layout/container/layout.component.html
+++ b/src/app/pages/eager/layout/container/layout.component.html
@@ -21,6 +21,7 @@
         (onLoginClick)="openLoginModal()"
         (onMenuItemClick)="handleMenuItemClick($event)"
         (onLogoutClick)="handleLogoutClick()"
+        (onCartClick)="handleCartClick()"
       ></nav-bar>
     </header>
     <!-- END Header -->
