--- a/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
+++ b/src/app/pages/eager/layout/presentations/nav-bar/nav-bar.component.html
@@ -7,14 +7,15 @@
     <button mat-button (click)="handleMenuItemClick('productos')">
       Productos
     </button>
-    <button mat-button *ngIf="user" (click)="handleMenuItemClick('carrito')">
-      Carrito
-    </button>
     <button mat-button *ngIf="user" (click)="handleMenuItemClick('misPedidos')">
       Mis Pedidos
     </button>
   </div>
   <div fxLayout="row" fxHide fxShow.gt-sm>
+    <button mat-button (click)="handleCartClick()">
+      <mat-icon>shopping_cart</mat-icon>
+      
+    </button>
     <button
       *ngIf="!user"
       mat-raised-button
@@ -23,7 +24,10 @@
     >
       Ingresar
     </button>
-    <a *ngIf="user" mat-button><mat-icon>account_circle</mat-icon> Bienvenido {{ user?.firstName }} !</a>
+
+    <a *ngIf="user" mat-button
+      ><mat-icon>account_circle</mat-icon> Bienvenido {{ user?.firstName }} !</a
+    >
     <a *ngIf="user" mat-button (click)="handleLogoutClick()">Salir</a>
   </div>
   <div fxLayout="row" fxShow fxHide.gt-sm>
